k8s/deploymentservice.yaml
kind: Service
apiVersion: v1
metadata:
  name: webapp-service
spec:
  selector:
    app: nodeapp
  ports:
  - protocol: TCP
    port: 3000
    nodePort: 32321
  type: NodePort
